--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,22 @@
                       <line x1="17" y1="7" x2="22" y2="7"></line>
                   </svg>
               </button>
+              <button id="filter-ranked-btn" class="btn icon-btn" title="Show Ranked Only">
+                  <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" stroke-width="2">
+                      <line x1="18" y1="20" x2="18" y2="10"></line>
+                      <line x1="12" y1="20" x2="12" y2="4"></line>
+                      <line x1="6" y1="20" x2="6" y2="14"></line>
+                  </svg>
               </button>
+              <button id="filter-search-btn" class="btn icon-btn" title="Search Champion">
+                  <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" stroke-width="2">
+                      <circle cx="11" cy="11" r="8"></circle>
+                      <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+                  </svg>
+              </button>
+          </div>
+          <div id="search-bar-container" style="display: none; padding: 4px 8px 8px 8px;">
+              <input type="text" id="search-input" placeholder="Search Champion..." style="width: 100%; padding: 4px; box-sizing: border-box; background: #222; color: #fff; border: 1px solid #444; border-radius: 4px;" autocomplete="off" spellcheck="false" />
           </div>
           
           <!-- Storage Info Bar -->
